# Sapiprudentia

./: .gitignore  .vercelignore  Cargo.toml  api.http  build.rs  docker-compose.yml  package.json  tsconfig.json  webpack.config.js  webpack.config.ts
.sqlx/: query-0f2fd9a34079f300a21d5caa0d096036b349c46abea5e07de6a172deeedc6258.json  query-15f2b92420209786cf039841cfd323ae132bd0fc1a3aed24c4a894da6483fd06.json  query-17cfa34196f55e78b1616f406f25c620b3a380005b891e5cc332cc75627cdb7e.json  query-209e099ae1f0984f130058f69af1ed11da37a31f339f6588cdb129a64cea37b5.json  query-21aa9bccfb6cdb1bbe75c00020a754c01892dd9f7f8e71fb77c0cbf38327da09.json  query-2ab7c848f794ea6cdc39e9e7ef8956b7cae1044d48cecd6ad52499c374ba35e1.json  query-3155f96e925849b0422c6b4d20a85ba95160e9c8c499b516236d3725cbd8eda7.json  query-3411aedefb9b399f310772dcbb7677f0d75fa5bdc80fb4b55238fcdd4522f0cb.json  query-3c30b95b7c6ca20ded4850b3af490a74cd2225dd91847fc8fd40086a3cf10827.json  query-4652b2940ccf421348b7a526ab989976aaefdef582f552a2661feabc7b94d69d.json  (+30 more)
backend/: .gitignore  Cargo.toml  Dockerfile
backend/.sqlx/: query-05ad6b97759d6ecfbdbc1817ab3316cf1be86f597d81d3553964a63cbeed4ba1.json  query-112ca0d5d27810f83cbaa9c4f3a4b1ff73bc553b8efff6447d6de14d0c9183b9.json  query-1201daa6fc85f98d8f91912f9c000ce26c0d8f95e85f1d47000ddb2a028b73ec.json  query-15422cb9f91d8b275efc1cc829071dce9df00d475d806782cb0d6d26da8ecddf.json  query-15f2b92420209786cf039841cfd323ae132bd0fc1a3aed24c4a894da6483fd06.json  query-1bf0c08460b2b301e27bb4bb487f10bf6311a2a9edd377b1e5f9dac699a5faca.json  query-29e0d8ae9d73dcdfeb5d841fb72791fdfaf8f451c192e3dcb2abcc21bb88685b.json  query-2ab7c848f794ea6cdc39e9e7ef8956b7cae1044d48cecd6ad52499c374ba35e1.json  query-34bc9acd003fad63dfc3ab619d0e6fd08b54cc2d20e56c60873f928ad97229c5.json  query-38469fda5bc7662cdbee50b5e04722a695faef59ec3dee06f722c39b126d7f4e.json  query-38948b99539c2cae9bfd926d923ed8e9f94628fb98ccbdb9cfbf7eea6f0a097a.json  query-4652b2940ccf421348b7a526ab989976aaefdef582f552a2661feabc7b94d69d.json  query-47b324642b3d4c69058541be9318b9d976652eae9a83d279ee1dd496e1736584.json  query-63c8e4356f54a30457ed856900a7b4f93cee4db8ba72d70964fe1a9e3645ea07.json  query-6461645b1656ddf2fc51de14fb73183aeca281925c017009f20f2fad95320de9.json  query-67a485fa00ef05ebd5448e079f804971f5a7ce21725b9d750ca6c10cef073919.json  query-8df993c7ffdd76321721fa8eae52b136aec7e5f3d7cee1cb102d6f9a9205c7e2.json  query-9422c6dfeed47dd7c708a33028e2acab8534fd9bdfb8fd58d150ee8cbe787f60.json  query-9b53f819682cc66e19c44a78ecb6929ba06c00047831f33f13da2a7d17dbecf8.json  query-a930de1e807c1032ec54bb72faa97f83398dae2526d052374fc8036183ebda73.json  query-aa54228e398c0a40845f7271aa419382fc81b997a62bf93fcb11b8222d6ee33e.json  query-abf8728425dbde49995b3e7bef860c5e0187183e65bd4098e7d131e715155712.json  query-ba8c714a8d2284bc50cb0e1f9f21054106c2ecdd145aec40d951ba6996999209.json  query-d318ed5a8fba1220b41e610bd41cd8347d72203663298e65df5ceba497a1d696.json  query-e64432502ab78cf2d4971029d4804fafe5fc415a0f9a21caf482086ce8b0a0ab.json  query-e78e7ca57d76e98da51713e21729079e43f26af1037e257e9d637d806ff79e4f.json  query-eb1bb9e1761b5f858d842d81cddd34991e1e235f8d1e49d5aae0f906399c27f7.json  query-f2d439d394116b76921c01d2438c4d06f2380c65dafb42026a1b94e55bc168e4.json  query-f6b97f106f3ab69ec7ac9c71a70a6c88aca2d6ddb71c8700a586b839519acdde.json  query-f831f4e36692de8ba8a0ce8b5ac897acc7f5eab0f429ba8433c7b405574cce26.json
backend/migrations/: 20231112021445_auth.sql  20231117065840_subjects.sql  20240120000531_sessions-userid-fix.sql  20240203035054_notes.sql  20240301061948_assessments.sql  20240305065056_exam-block.sql  20240305073819_standing-todo.sql
backend/src/: auth.rs  main.rs
backend/src/api/: mod.rs
backend/src/api/graphql/: mod.rs
backend/src/api/graphql/mutation/: mod.rs  note.rs  session.rs  subject.rs  todo.rs  user.rs
backend/src/api/graphql/query/: assessment.rs  document.rs  mod.rs  note.rs  session.rs  subject.rs  todo.rs  user.rs
src/: api.rs  (+7 more)
(+126 files in other folders)
