[package]
name = "sapiprudentia"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
argon2 = { version = "0.5.3", features = ["std"] }
async-graphql = { version = "7.0.1", optional = true, features = ["chrono"] }
async-graphql-rocket = { version = "7.0.1", optional = true }
chrono = { version = "0.4.33", features = ["serde"] }
email_address = "0.2.4"
itertools = "0.12.1"
jsonwebtoken = "9.2.0"
lazy_static = "1.4.0"
rocket = { version = "0.5.0", features = ["json"] }
rocket_cors = "0.6.0"
serde = "1.0.196"
serde_json = "1.0.113"
serde_with = "3.5.1"
shuttle-rocket = "0.37.0"
shuttle-runtime = "0.37.0"
shuttle-secrets = "0.37.0"
shuttle-shared-db = { version = "0.37.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.7.3", features = ["postgres", "macros", "chrono"] }
tokio = "1.35.1"

[features]
default = ["api_graphql"]
api_graphql = ["async-graphql", "async-graphql-rocket"]
